<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rclrust_examples_minimal_publisher</name>
  <version>0.0.1</version>
  <description>Examples of minimal publisher node</description>
  <maintainer email="yuma.hiramatsu@gmail.com">Yuma Hiramatsu</maintainer>
  <author email="yuma.hiramatsu@gmail.com">Yuma Hiramatsu</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
